force-app/main/default/objects/Roadshow_Registration__c/Roadshow_Registration__c.object-meta.xml
<CustomObject>
    <label>Roadshow Registration</label>
    <nameField>
        <displayFormat>RR-{00000000}</displayFormat>
        <label>Roadshow Registration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roadshow Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>