force-app/main/default/objects/Roadshow_Registration__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <length>200</length>
    <type>Text</type>
</CustomField>