force-app/main/default/objects/Roadshow_Registration__c/fields/How_did_you_hear__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear__c</fullName>
    <label>How did you hear?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>