force-app/main/default/objects/Roadshow_Registration__c/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>PostCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>