force-app/main/default/objects/Roadshow_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Roadshow__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Surname__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>