force-app/main/default/objects/Roadshow_Registration__c/listViews/MLB.listView-meta.xml
<ListView>
    <fullName>MLB</fullName>
    <columns>NAME</columns>
    <columns>Attended__c</columns>
    <columns>Surname__c</columns>
    <columns>First_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Roadshow__c</field>
        <operation>contains</operation>
        <value>Melbourne</value>
    </filters>
    <label>MLB</label>
</ListView>